--- a/css/navbar.css
+++ b/css/navbar.css
@@ -82,6 +82,9 @@
   background-color: red;
   border-radius: 50%;
   color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .nav .navbar-medium .deeds .heart {
   text-align: center;
@@ -100,6 +103,9 @@
   background-color: red;
   border-radius: 50%;
   color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .nav .navbar-medium .deeds .shop {
   text-align: center;
@@ -118,6 +124,9 @@
   background-color: red;
   border-radius: 50%;
   color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .nav .navbar-bottom {
   width: 100%;
@@ -129,8 +138,8 @@
 .nav .navbar-bottom button {
   padding: 7px 45px;
   display: flex;
-  justify-content: start;
-  margin: 0;
+  justify-content: center;
+  align-items: center;
   gap: 10px;
   background-color: #ED3729;
   font-size: 14px;
@@ -149,4 +158,11 @@
 .nav ul li {
   font-weight: 550;
   display: flex;
+}
+
+@media screen and (max-width: 447px) {
+  .nav {
+    width: 447px;
+    display: none;
+  }
 }
