--- a/src/base-info/base-info.scss
+++ b/src/base-info/base-info.scss
@@ -47,30 +47,27 @@
             transition: all .5s ease;
         
             box-shadow: 0 0  10px 0 grey;
-           
-
+        
           
          }
 
         
         .image{
             width: 100%;
-            height: 250px;
+            height: 200px;
             display: flex;
+     
             .item{
                 width: 75%;
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                &:hover{
-                    transform: scale(1.9);
-                    transition: all .4s ease;
-                }
+               
 
             }
             .discount{
                 width: 25%;
-                margin-top: 25px;
+                padding-top: 10px;
                 padding-left: 25px;
            
                
@@ -114,11 +111,11 @@
             font-size: 10px;
             text-align: center;
             font-weight: 700;
-            margin: 20px 0;
+        
         }
         .discount-time{
             text-align: center;
-            margin: 10px 0;
+            
             
             p{
                 font-size: 16px;
@@ -132,6 +129,7 @@
             display: flex;
             justify-content: space-evenly;
             align-items: center;
+            margin: 5px 0;
             .times{
                 text-align: center;
                 p{
@@ -146,14 +144,12 @@
             display: flex;
             justify-content: space-evenly;
             align-items: center;
-            margin: 20px 0;
-            font-size: 20px;
+             padding: 10px 0;
             border-top: 1px solid grey;
             
             i{
-                color: grey;
-                padding-top: 10px;
-
+               color: grey;
+                font-size: 20px;
                 &:hover{
                     color: red;
                 }
