--- a/src/navbar/navbar_top.scss
+++ b/src/navbar/navbar_top.scss
@@ -8,7 +8,7 @@
     align-items: center;
     
 
-    .navbar_top{
+    .navbar-top{
       width: 1440px;
       margin: 0 auto;
         color: white;
@@ -39,5 +39,29 @@
             
         }
     }
+    .navbar-media{
+        display: none;
+    }
+
 
 }
+
+@media screen and (max-width:447px) {
+    .navbar-top-big{
+        width: 100%;
+        background-color: white;
+        border: 1px solid red;
+      
+    }
+    .navbar-media{
+        display: flex ;
+    
+    }
+    .navbar-top{
+        display: none;
+
+    }
+    
+    
+}
+
