--- a/src/category/category.scss
+++ b/src/category/category.scss
@@ -1,13 +1,13 @@
 .category{
     width: 1440px;
-    height: 500px;
+    height: auto;
     background-color: white;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    animation-name: animat;
-     animation-duration: .5s;
-     border: 2px solid red;
+    position: absolute;
+    z-index: 3;
+   
      
   
     
@@ -53,18 +53,9 @@
       
         img{
             width: 100%;
-            height: 100%;
+            height: 90%;
             border-radius: 10px;
         }
     }
 }
 
-@keyframes  animat{
-    0%{
-        bottom: -100%;
-    }
-    100%{
-        top: 0
-
-    }
-}
